--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,8 +2,8 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Übersicht</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
@@ -12,8 +12,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-icon name="leaf-outline"></ion-icon>
+      <ion-label>Steckbrief</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
