--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,38 +13,42 @@
         <img src="\assets\images\plant_1.jpg" alt="Pflanze 1">
        </ion-thumbnail>
        <ion-label position="fixed">Pflanze 1</ion-label>
-       <ion-progress-bar value="0.5"></ion-progress-bar>
+       <ion-progress-bar color="tertiary" value="0.5"></ion-progress-bar>
     </ion-item>
     <ion-item>
       <ion-thumbnail slot="start">
         <img src="\assets\images\plant_2.jpg" alt="Pflanze 2">
        </ion-thumbnail>
        <ion-label position="fixed">Pflanze 2</ion-label>
-       <ion-progress-bar value="0.7"></ion-progress-bar>
+       <ion-progress-bar color="tertiary" value="0.7"></ion-progress-bar>
     </ion-item>
     <ion-item>
       <ion-thumbnail slot="start">
         <img src="\assets\images\plant_3.jpg" alt="Pflanze 3">
        </ion-thumbnail>
        <ion-label position="fixed">Pflanze 3</ion-label>
-       <ion-progress-bar value="0.2"></ion-progress-bar>
+       <ion-progress-bar color="tertiary" value="0.2"></ion-progress-bar>
     </ion-item>
     <ion-item>
       <ion-thumbnail slot="start">
         <img src="\assets\images\plant_4.jpg" alt="Pflanze 4">
        </ion-thumbnail>
        <ion-label position="fixed">Pflanze 4</ion-label>
-       <ion-progress-bar value="0.3"></ion-progress-bar>
+       <ion-progress-bar color="tertiary" value="0.3"></ion-progress-bar>
     </ion-item>
     <ion-item>
       <ion-thumbnail slot="start">
         <img src="\assets\images\plant_5.jpg" alt="Pflanze 5">
        </ion-thumbnail>
        <ion-label position="fixed">Pflanze 5</ion-label>
-       <ion-progress-bar value="0.9"></ion-progress-bar>
+       <ion-progress-bar color="tertiary" value="0.9"></ion-progress-bar>
     </ion-item>
   </ion-list>
 
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button color="secondary"> 
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 
- 
 </ion-content>
