foto addieren, in storage speichern

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,50 +1,71 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title> Steckbrief </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Steckbrief</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  
-    <img src="\assets\images\plant_2.jpg" alt="Pflanze 2">
-  
-    <ion-input type="text" maxlength="15" minlength="3" placeholder="Enter Name" name="plantname" required="true"></ion-input>
+  <img src="\assets\images\plant_2.jpg" alt="Pflanze 2" />
 
-    <ion-grid>
-      <ion-row>
-        <ion-col size="4">
-          <ion-button class="specs" color="tertiary">Wasserbedarf</ion-button>
-        </ion-col>
-        <ion-col size="2">
-          <ion-button class="specs"color="licht">Licht</ion-button>
-        </ion-col>
-        <ion-col size="2">
-          <ion-button class="specs"color="temp">Temp.</ion-button>
-        </ion-col>
-        <ion-col size="4">
-          <ion-button class="specs"color="luftfeucht">Luftfeucht.</ion-button>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="6">
-            <ion-datetime  display-timezone="cet" pickerFormat="H mm" displayFormat="H:mm" minuteValues="0,15,30,45" placeholder="12:00"></ion-datetime>
-        </ion-col>
-        <ion-col size="6">
-          <ion-toggle name="alarm"></ion-toggle>
-        </ion-col>
-      </ion-row>
-      </ion-grid>
-  
-    
-    <h4>Notizen</h4>
-    <ion-textarea placeholder="Enter more information here..." autoGrow="true" maxlength="500" name="description"></ion-textarea>
+  <ion-input
+    type="text"
+    maxlength="15"
+    minlength="3"
+    placeholder="Name hinzufügen"
+    name="plantname"
+    required="true"
+  ></ion-input>
 
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4">
+        <ion-button class="specs" color="tertiary">Wasserbedarf</ion-button>
+      </ion-col>
+      <ion-col size="2">
+        <ion-button class="specs" color="licht">Licht</ion-button>
+      </ion-col>
+      <ion-col size="2">
+        <ion-button class="specs" color="temp">Temp.</ion-button>
+      </ion-col>
+      <ion-col size="4">
+        <ion-button class="specs" color="luftfeucht">Luftfeucht.</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6">
+        <ion-datetime
+          display-timezone="cet"
+          pickerFormat="H:mm"
+          displayFormat="H:mm"
+          minuteValues="0,15,30,45"
+          value="1990-02-19T07:43Z"
+        ></ion-datetime>
+      </ion-col>
+      <ion-col size="6">
+        <ion-toggle name="alarm"></ion-toggle>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <h4 class="notiz">Notizen</h4>
+  <ion-textarea
+    class="notiz_text"
+    placeholder="Enter more information here..."
+    autoGrow="true"
+    maxlength="500"
+    name="description"
+  ></ion-textarea>
+
+  <ion-col size="4">
+    <!-- <ion-button class="speichern" (click)="updateItem(item)"
+      >Speichern</ion-button
+    > -->
+    <ion-button class="speichern">Speichern</ion-button>
+  </ion-col>
 </ion-content>
