--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,167 +1,181 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Übersicht
-    </ion-title>
+    <ion-title> Übersicht </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
+    <!-- <ion-item-sliding>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="\assets\images\plant_1.jpg" alt="Pflanze 1" />
+        </ion-thumbnail>
+        <ion-label>
+          <ion-text>
+            <h2>Pflanze 1</h2>
+          </ion-text>
+          <ion-progress-bar color="tertiary" value="0.5"></ion-progress-bar>
+          <ion-text>
+            <p class="ion-float-left">Wohnzimmer</p>
+            <p class="ion-float-right">
+              Mo 19:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
+            </p>
+          </ion-text>
+        </ion-label>
+      </ion-item>
 
-        <ion-item-sliding>
+      <ion-item-options side="end">
+        <ion-item-option type="button" color="danger" (click)="delete(item)">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
 
-          <ion-item>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="\assets\images\plant_2.jpg" alt="Pflanze 2" />
+        </ion-thumbnail>
+        <ion-label>
+          <ion-text>
+            <h2>Pflanze 2</h2>
+          </ion-text>
+          <ion-progress-bar color="tertiary" value="0.7"></ion-progress-bar>
+          <ion-text>
+            <p class="ion-float-left">Küche</p>
+            <p class="ion-float-right">
+              Die 17:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
+            </p>
+          </ion-text>
+        </ion-label>
+      </ion-item>
 
-            <ion-thumbnail slot="start">
-              <img src="\assets\images\plant_1.jpg" alt="Pflanze 1">
-            </ion-thumbnail>
-            <ion-label>
-              <ion-text>
-                <h2>Pflanze 1</h2>
-              </ion-text>
-              <ion-progress-bar color="tertiary" value="0.5"></ion-progress-bar>
-              <ion-text>
-                <p class="ion-float-left">Wohnzimmer</p>
-                <p class="ion-float-right">Mo 19:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
-                </p>
-              </ion-text>
-            </ion-label>
-          </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option type="button" color="danger" (click)="delete(item)">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
 
-          <ion-item-options side="end">
-            <ion-item-option type="button" color="danger" (click)="delete(item)">
-              <ion-icon name="trash-outline"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="\assets\images\plant_3.jpg" alt="Pflanze 3" />
+        </ion-thumbnail>
+        <ion-label>
+          <ion-text>
+            <h2>Pflanze 3</h2>
+          </ion-text>
+          <ion-progress-bar color="tertiary" value="0.2"></ion-progress-bar>
+          <ion-text>
+            <p class="ion-float-left">Küche</p>
+            <p class="ion-float-right">
+              Mo 19:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
+            </p>
+          </ion-text>
+        </ion-label>
+      </ion-item>
 
-        </ion-item-sliding>
+      <ion-item-options side="end">
+        <ion-item-option type="button" color="danger" (click)="delete(item)">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
 
+    <ion-item-sliding>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="\assets\images\plant_4.jpg" alt="Pflanze 4" />
+        </ion-thumbnail>
+        <ion-label>
+          <ion-text>
+            <h2>Pflanze 4</h2>
+          </ion-text>
+          <ion-progress-bar color="tertiary" value="0.3"></ion-progress-bar>
+          <ion-text>
+            <p class="ion-float-left">Flur</p>
+            <p class="ion-float-right">
+              Sa 15:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
+            </p>
+          </ion-text>
+        </ion-label>
+      </ion-item>
 
-        <ion-item-sliding>
+      <ion-item-options side="end">
+        <ion-item-option type="button" color="danger" (click)="delete(item)">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
 
-          <ion-item>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="\assets\images\plant_5.jpg" alt="Pflanze 5" />
+        </ion-thumbnail>
+        <ion-label>
+          <ion-text>
+            <h2>Pflanze 5</h2>
+          </ion-text>
+          <ion-progress-bar color="tertiary" value="0.9"></ion-progress-bar>
+          <ion-text>
+            <p class="ion-float-left">Fotostudio</p>
+            <p class="ion-float-right">
+              Die 17:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
+            </p>
+          </ion-text>
+        </ion-label>
+      </ion-item>
 
-            <ion-thumbnail slot="start">
-              <img src="\assets\images\plant_2.jpg" alt="Pflanze 2">
-            </ion-thumbnail>
-            <ion-label>
-              <ion-text>
-                <h2>Pflanze 2</h2>
-              </ion-text>
-              <ion-progress-bar color="tertiary" value="0.7"></ion-progress-bar>
-              <ion-text>
-                <p class="ion-float-left">Küche</p>
-                <p class="ion-float-right">Die 17:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
-                </p>
-              </ion-text>
-            </ion-label>
+      <ion-item-options side="end">
+        <ion-item-option type="button" color="danger" (click)="delete(item)">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding> -->
+    <ion-item-sliding
+      *ngFor="let photo of photoService.photos; index as position; "
+    >
+      <ion-item [routerLink]="['/tabs/tab3']">
+        <ion-thumbnail slot="start">
+          <img
+            ion-img
+            [src]="photo.webviewPath"
+            alt="Pflanze 
+        "
+          />
+        </ion-thumbnail>
+        <ion-label>
+          <ion-text>
+            <h2>Pflanze</h2>
+          </ion-text>
+          <ion-progress-bar color="tertiary" id="pb"></ion-progress-bar>
+          <ion-text>
+            <p class="ion-float-left">Fotostudio</p>
+            <p class="ion-float-right">
+              Die 17:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
+            </p>
+          </ion-text>
+        </ion-label>
+      </ion-item>
 
-          </ion-item>
-
-          <ion-item-options side="end">
-            <ion-item-option type="button" color="danger" (click)="delete(item)">
-              <ion-icon name="trash-outline"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-
-        </ion-item-sliding>
- 
-
-        <ion-item-sliding>
-
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img src="\assets\images\plant_3.jpg" alt="Pflanze 3">
-            </ion-thumbnail>
-            <ion-label>
-              <ion-text>
-                <h2>Pflanze 3</h2>
-              </ion-text>
-              <ion-progress-bar color="tertiary" value="0.2"></ion-progress-bar>
-              <ion-text>
-                <p class="ion-float-left">Küche</p>
-                <p class="ion-float-right">Mo 19:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
-                </p>
-              </ion-text>
-            </ion-label>
-
-          </ion-item>
-
-          <ion-item-options side="end">
-            <ion-item-option type="button" color="danger" (click)="delete(item)">
-              <ion-icon name="trash-outline"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-
-        </ion-item-sliding>
-
-
-        <ion-item-sliding>
-
-          <ion-item>
-
-            <ion-thumbnail slot="start">
-              <img src="\assets\images\plant_4.jpg" alt="Pflanze 4">
-            </ion-thumbnail>
-            <ion-label>
-              <ion-text>
-                <h2>Pflanze 4</h2>
-              </ion-text>
-              <ion-progress-bar color="tertiary" value="0.3"></ion-progress-bar>
-              <ion-text>
-                <p class="ion-float-left">Flur</p>
-                <p class="ion-float-right">Sa 15:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
-                </p>
-              </ion-text>
-            </ion-label>
-
-          </ion-item>
-
-          <ion-item-options side="end">
-            <ion-item-option type="button" color="danger" (click)="delete(item)">
-              <ion-icon name="trash-outline"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-
-        </ion-item-sliding>
-
-
-        <ion-item-sliding>
-
-          <ion-item>
-
-            <ion-thumbnail slot="start">
-              <img src="\assets\images\plant_5.jpg" alt="Pflanze 5">
-            </ion-thumbnail>
-            <ion-label>
-              <ion-text>
-                <h2>Pflanze 5</h2>
-              </ion-text>
-              <ion-progress-bar color="tertiary" value="0.9"></ion-progress-bar>
-              <ion-text>
-                <p class="ion-float-left">Fotostudio</p>
-                <p class="ion-float-right">Die 17:00 Uhr <ion-icon name="alarm-outline"></ion-icon>
-                </p>
-              </ion-text>
-            </ion-label>
-
-          </ion-item>
-
-          <ion-item-options side="end">
-            <ion-item-option type="button" color="danger" (click)="delete(item)">
-              <ion-icon name="trash-outline"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-
-        </ion-item-sliding>
-
+      <ion-item-options side="end">
+        <ion-item-option
+          type="button"
+          color="danger"
+          (click)="deletePictureFromGallery(photo, position)"
+        >
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="secondary">
+    <ion-fab-button color="secondary" (click)="addPhotoToGallery()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-
 </ion-content>
