--- a/src/app/steckbrief/tab3.page.html
+++ b/src/app/steckbrief/tab3.page.html
@@ -1,13 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title> Steckbrief </ion-title>
-    <ion-icon
-      name="close"
-      slot="end"
-      size="larger"
-      class="ion-padding"
-      (click)="dismis()"
-    ></ion-icon>
   </ion-toolbar>
 </ion-header>
 
@@ -24,10 +17,9 @@
     type="text"
     maxlength="15"
     minlength="3"
-    placeholder="Name hinzufügen"
+    placeholder="Enter Name"
     name="plantname"
     required="true"
-    [(ngModel)]="photoName"
   ></ion-input>
 
   <ion-grid>
@@ -52,8 +44,7 @@
           pickerFormat="H mm"
           displayFormat="H:mm"
           minuteValues="0,15,30,45"
-          value="1990-02-19T07:43Z"
-          (ionChange)="getValue($event)"
+          placeholder="12:00"
         ></ion-datetime>
       </ion-col>
       <ion-col size="6">
@@ -62,13 +53,11 @@
     </ion-row>
   </ion-grid>
 
-  <h4 class="notiz">Notizen</h4>
+  <h4>Notizen</h4>
   <ion-textarea
-    class="notiz_text"
     placeholder="Enter more information here..."
     autoGrow="true"
     maxlength="500"
     name="description"
   ></ion-textarea>
-  <ion-button class="speichern" (click)="update()">Speichern</ion-button>
 </ion-content>
