Buttons, WeekdaySelection, Layout Steckbrief

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,12 +1,30 @@
+<ion-menu side="end" menuId="first" contentId="main">
+  <ion-header>
+    <ion-toolbar color="secondary">
+      <ion-title>Menü</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item><ion-icon name="share-social-outline"></ion-icon><p class="menu-item">Teilen</p></ion-item>
+      <ion-item><ion-icon name="reorder-four-outline"></ion-icon><p class="menu-item">Neu anordnen</p></ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+
+
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
       Übersicht
     </ion-title>
+    <ion-buttons slot="end" class="menu-button"><ion-menu-button class="md button in-toolbar ion-activatable ion-focusable hydrated"></ion-menu-button></ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content id="main">
   <ion-list>
 
         <ion-item-sliding>
