--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -2,11 +2,14 @@ img {
     width:150px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     display:block;
 }
 ion-input{
  text-align: center;
+}
+.sc-ion-input-md-h{
+    --padding-start: 0px;
 }
 ion-datetime{
     margin-left: auto;
@@ -14,6 +17,7 @@ ion-datetime{
     font-size: 40px;
     width: 100px;;
     padding: 0%;
+    color: rgb(80, 80, 80);
 }
 ion-toggle{
     text-align: center;
@@ -27,4 +31,187 @@ ion-col{
     border-radius: 5%;
     vertical-align: middle;
     font-size: 10px;
+}
+.water{
+    width: 64px;
+    height: 64px;
+}
+.water-alot{
+    background-image: url('/assets/images/Tropfen_voll_px.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+.water-abit{
+    background-image: url('/assets/images/Tropfen_leer_px.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+.water-medium{
+    background-image: url('/assets/images/Tropfen_halb_px.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.temperatur{
+    width: 64px;
+    height: 64px;
+}
+.temperatur-alot{
+    background-image: url('/assets/images/Therm_voll.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+.temperatur-abit{
+    background-image: url('/assets/images/Therm_leer.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+.temperatur-medium{
+    background-image: url('/assets/images/Therm_halb.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.licht{
+    width: 64px;
+    height: 64px;
+}
+.licht-alot{
+    background-image: url('/assets/images/Licht_sonnig.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+.licht-abit{
+    background-image: url('/assets/images/Licht_schattig.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+.licht-medium{
+    background-image: url('/assets/images/Licht_hell.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.feuchtigkeit{
+    width: 64px;
+    height: 64px;
+}
+.feuchtigkeit-alot{
+    background-image: url('/assets/images/Luft_hoch.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+.feuchtigkeit-abit{
+    background-image: url('/assets/images/Luft_gering.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+.feuchtigkeit-medium{
+    background-image: url('/assets/images/Luft_mittel.png');
+    background-color: #cccccc;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.alarm-section{
+    background-color: #cfcfcf;
+}
+
+.alarm-row{
+    justify-content: space-between;
+}
+
+.alarm-left{
+    margin-left: auto;
+}
+
+
+.center-wrapper{
+    display:table;
+    height:100%;
+    width:100%;
+}
+.centered-content{
+    display:table-cell;
+    vertical-align: middle;
+}
+
+
+ion-select::part(placeholder) {
+   opacity: 0,9;
+  }
+ion-select::part(text) {
+    color: rgb(80, 80, 80);
+  }
+  ion-select::part(icon) {
+    color: rgb(80, 80, 80);
+    opacity: 1;
+  }
+
+select {
+    appearance: none;
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: inherit;
+    line-height: inherit;
+    z-index: 1;
+}
+  
+#standard-select{
+  height:100%;
+}
+
+.select {
+    grid-template-areas: "select";
+    align-items: center;
+    position: relative;
+    text-align-last:center;
+    border: 1px solid var(--select-border);
+    border-radius: 5px;
+    box-shadow: 0 1px 3px -2px #a1a1a1;
+    cursor: pointer;
+    background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
+}
+  
+select:focus + .focus {
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    border: 2px solid var(--select-focus);
+    border-radius: inherit;
+}
+option {
+    white-space: normal;
+
+    // Only affects Chrome
+    outline-color: var(--select-focus);
 }
