pass image,image's name, description from homepage to detail page,image's name, description editable

--- a/src/app/steckbrief/steckbrief.page.scss
+++ b/src/app/steckbrief/steckbrief.page.scss
@@ -34,7 +34,9 @@ ion-col {
 }
 .notiz_text {
   margin-left: 4.5%;
+  margin-top: -2%;
+  font-size: 14px;
 }
 .speichern {
-  margin: 0 50% 1% 45%;
+  margin: 3% 70% 5% 40%;
 }
