--- a/src/app/steckbrief/steckbrief.page.html
+++ b/src/app/steckbrief/steckbrief.page.html
@@ -1,6 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title> Steckbrief </ion-title>
+    <ion-icon
+      name="close"
+      slot="end"
+      size="larger"
+      class="ion-padding"
+      (click)="dismis()"
+    ></ion-icon>
   </ion-toolbar>
 </ion-header>
 
@@ -11,15 +18,16 @@
     </ion-toolbar>
   </ion-header>
 
-  <img src="\assets\images\plant_2.jpg" alt="Pflanze 2" />
+  <img [src]="photo.webviewPath" alt="Pflanze" />
 
   <ion-input
     type="text"
     maxlength="15"
     minlength="3"
-    placeholder="Enter Name"
+    placeholder="Add name here"
     name="plantname"
     required="true"
+    [(ngModel)]="photoName"
   ></ion-input>
 
   <ion-grid>
@@ -44,7 +52,8 @@
           pickerFormat="H mm"
           displayFormat="H:mm"
           minuteValues="0,15,30,45"
-          placeholder="12:00"
+          value="1990-02-19T07:43Z"
+          (ionChange)="getValue($event)"
         ></ion-datetime>
       </ion-col>
       <ion-col size="6">
@@ -53,11 +62,15 @@
     </ion-row>
   </ion-grid>
 
-  <h4>Notizen</h4>
+  <h4 class="notiz">Notizen</h4>
   <ion-textarea
-    placeholder="Enter more information here..."
+    class="notiz_text"
+    placeholder="Beschreibung hinzufügen"
     autoGrow="true"
     maxlength="500"
     name="description"
+    required="true"
+    [(ngModel)]="photoDiscription"
   ></ion-textarea>
+  <ion-button class="speichern" (click)="update()">Speichern</ion-button>
 </ion-content>
