--- a/src/app/steckbrief/steckbrief.page.html
+++ b/src/app/steckbrief/steckbrief.page.html
@@ -19,9 +19,9 @@
   </ion-header>
 
   <ion-grid class="condition">
-    <ion-row>
-      <ion-col>
-        <ion-row size="3" class="water_condition">
+    <ion-row class="plant-row">
+      <ion-col class="col_1">
+        <ion-row  class="water_condition">
           <ion-col
             ><button
               id="wasserbedarf"
@@ -30,7 +30,7 @@
             ></button
           ></ion-col>
         </ion-row>
-        <ion-row size="3">
+        <ion-row >
           <ion-col
             ><button
               id="temperatur"
@@ -40,8 +40,8 @@
           ></ion-col>
         </ion-row>
       </ion-col>
-      <ion-col>
-        <ion-col>
+      <ion-col class="col_2">
+       
           <img [src]="photo.webviewPath" alt="Pflanze 2" />
           <ion-input
             type="text"
@@ -53,10 +53,10 @@
             [(ngModel)]="photoName"
             class="photo_name"
           ></ion-input>
-        </ion-col>
+        
       </ion-col>
-      <ion-col>
-        <ion-row size="3" class="light_condition">
+      <ion-col class="col_3">
+        <ion-row  class="light_condition">
           <ion-col
             ><button
               id="licht"
@@ -65,7 +65,7 @@
             ></button
           ></ion-col>
         </ion-row>
-        <ion-row size="3">
+        <ion-row >
           <ion-col
             ><button
               id="feuchtigkeit"
@@ -80,13 +80,14 @@
 
   <ion-grid class="alarm-section">
     <ion-row class="alarm-row">
-      <ion-col size="4">
-        <div class="center-wrapper">
-          <div class="centered-content">
+      <ion-col  class="flex-item">
+        <!-- <div class="center-wrapper">
+          <div class="centered-content">-->
             <ion-select
               placeholder="Wochentag"
               okText="Ok"
               cancelText="Abbrechen"
+              multiple="true"
             >
               <ion-select-option value="1">Montag</ion-select-option>
               <ion-select-option value="2">Dienstag</ion-select-option>
@@ -96,31 +97,30 @@
               <ion-select-option value="6">Samtag</ion-select-option>
               <ion-select-option value="7">Sonntag</ion-select-option>
             </ion-select>
-          </div>
-        </div>
+         <!--  </div>
+        </div>-->
       </ion-col>
 
-      <ion-col size="2" class="alarm-left">
+      <ion-col  class="alarm-left flex-item">
+            <ion-row class="alarm-time">
+              <ion-datetime
+                display-timezone="cet"
+                pickerFormat="H mm"
+                displayFormat="H:mm"
+                minuteValues="0,15,30,45"
+                placeholder="12:00"
+                (ionChange)="getValue($event)"
+              ></ion-datetime>
+                 <ion-toggle name="alarm" color="secondary"></ion-toggle>
+            </ion-row>
+      </ion-col>
+     <!-- <ion-col  class="alarm_toggle flex-item">
         <div class="center-wrapper">
           <div class="centered-content">
-            <ion-datetime
-              display-timezone="cet"
-              pickerFormat="H mm"
-              displayFormat="H:mm"
-              minuteValues="0,15,30,45"
-              placeholder="12:00"
-              (ionChange)="getValue($event)"
-            ></ion-datetime>
+            <ion-toggle name="alarm" color="secondary"></ion-toggle>
           </div>
         </div>
-      </ion-col>
-      <ion-col size="3" class="alarm_toggle">
-        <div class="center-wrapper">
-          <div class="centered-content">
-            <ion-toggle name="alarm"></ion-toggle>
-          </div>
-        </div>
-      </ion-col>
+      </ion-col>-->
     </ion-row>
   </ion-grid>
 
@@ -134,5 +134,5 @@
     [(ngModel)]="photoDiscription"
   ></ion-textarea>
 
-  <ion-button class="speichern" (click)="update()">Speichern</ion-button>
+  <ion-button class="speichern" color="secondary" (click)="update()">Speichern</ion-button>
 </ion-content>
