--- a/src/app/uebersicht/uebersicht.page.html
+++ b/src/app/uebersicht/uebersicht.page.html
@@ -29,7 +29,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content id="main">
   <ion-list>
     <ion-item-sliding
       *ngFor="let photo of photoService.photos; index as position; "
