--- a/src/app/steckbrief/steckbrief.page.scss
+++ b/src/app/steckbrief/steckbrief.page.scss
@@ -2,9 +2,11 @@ img {
   width: 150px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
+  margin-top: 40px;
   display: block;
 }
+
+
 ion-input {
   text-align: center;
 }
@@ -12,8 +14,8 @@ ion-input {
   --padding-start: 0px;
 }
 ion-datetime {
-  margin-left: auto;
-  margin-right: auto;
+  /*argin-left: auto;
+  margin-right: auto;*/
   font-size: 40px;
   width: 100px;
   padding: 0%;
@@ -33,8 +35,8 @@ ion-col {
   font-size: 10px;
 }
 .water {
-  width: 64px;
-  height: 64px;
+  width: 48px;
+  height: 48px;
 }
 .water-alot {
   background-image: url("/assets/images/Tropfen_voll_px.png");
@@ -59,8 +61,8 @@ ion-col {
 }
 
 .temperatur {
-  width: 64px;
-  height: 64px;
+  width: 48px;
+  height: 48px;
 }
 .temperatur-alot {
   background-image: url("/assets/images/Therm_voll.png");
@@ -85,8 +87,8 @@ ion-col {
 }
 
 .licht {
-  width: 64px;
-  height: 64px;
+  width: 48px;
+  height: 48px;
 }
 .licht-alot {
   background-image: url("/assets/images/Licht_sonnig.png");
@@ -111,8 +113,8 @@ ion-col {
 }
 
 .feuchtigkeit {
-  width: 64px;
-  height: 64px;
+  width: 48px;
+  height: 48px;
 }
 .feuchtigkeit-alot {
   background-image: url("/assets/images/Luft_hoch.png");
@@ -141,12 +143,37 @@ ion-col {
 }
 
 .alarm-row {
-  justify-content: space-between;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
-.alarm-left {
-  margin-left: auto;
+.plant-row{
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
+
+.col_1{
+  flex-shrink: 2;
+}
+.col_2{
+  vertical-align: middle;
+}
+.col_3{
+  flex-shrink: 2;
+}
+
+/*.alarm-left {
+  margin-left: auto;
+}*/
+
+.alarm-time{
+  justify-content: flex-end;
+}
+
+.flex-item{
+  box-sizing: border-box;
+}
+
 
 .center-wrapper {
   display: table;
@@ -157,6 +184,7 @@ ion-col {
   display: table-cell;
   vertical-align: middle;
 }
+
 
 ion-select::part(placeholder) {
   opacity: 0, 9;
@@ -222,9 +250,10 @@ option {
 .notizen {
   margin-left: 17px;
 }
+/*
 .alarm_toggle {
   margin-left: 20px;
-}
+}*/
 .alarm-section {
   margin-bottom: 60px;
 }
@@ -242,4 +271,37 @@ option {
 }
 .condition {
   margin-top: 40px;
+}
+.foto{
+  margin-top: 20px;
+}
+
+
+@media screen and (max-width: 400px){
+  .col_2{
+    flex-basis: 100%;
+    order: 1;
+    margin-left: auto;
+    margin-right: auto;
+    flex-grow: 2;
+  }
+  .col_1 {
+      order: 2;
+      flex-basis: 50%;
+      margin-top: 0px;
+  }
+  .col_3 {
+    order: 3;
+    flex-basis: 50%;
+    margin-top: 0px;
+  }
+  .photo_name{
+    margin-bottom: 0px;
+  }
+  .light_condition{
+    margin-top: 0px;
+  }
+  .water_condition{
+    margin-top: 0px;
+  }
 }
