Standort der Pflanze

--- a/src/app/steckbrief/steckbrief.page.html
+++ b/src/app/steckbrief/steckbrief.page.html
@@ -78,6 +78,19 @@
     </ion-row>
   </ion-grid>
 
+  <ion-grid>
+    <ion-row>
+      <ion-input
+      type="text"
+      maxlength="30"
+      minlength="3"
+      placeholder="Standort der Pflanze"
+      required="true"
+      class = "standorttext"
+    ></ion-input>
+    </ion-row>
+  </ion-grid>
+
   <ion-grid class="alarm-section">
     <ion-row class="alarm-row">
       <ion-col  class="flex-item">
